# CRYUFF

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: API.md  ipad_deployment.md
engine/: biokinetic_engine.py  clip_engine.py  fusion_engine.py  ghost_trajectory_engine.py  gpu_isolation.py  sensor_ekf.py  setpiece_detector.py  setpiece_ghost.py  setpiece_solver.py  spatial_bridge.py  temporal_smoother.py  topological_solver.py  voice_engine.py  volumetric.py  wearable_ingest.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: manifest.json
frontend/src/: App.jsx  index.css
frontend/src/components/: BallLayer.jsx  ClipDrawer.jsx  FlowLayer.jsx  GhostLayer.jsx  HUD.jsx  OmniCamLayer.jsx  OptimizeButton.jsx  PitchCanvas.jsx  PitchLines.jsx  PulseLayer.jsx  PushButton.jsx  SetPieceOverlay.jsx  VoiceButton.jsx
frontend/src/hooks/: useAnalysisStream.js  useContextRecovery.js  useVideoSync.js
frontend/src/lib/: constants.js  degradation.js  homography.js  touchKalman.js  (+2 more)
scripts/: load_test.py  profile_benchmark.py
server/: auth.py  dressing_room_ws.py  main.py  push_service.py  redis_bus.py  transport_hysteresis.py  webrtc_transport.py
shared/: config.py  schemas.py  shm_buffer.py
tests/: test_clip_engine.py  test_push_service.py  test_setpiece_solver.py  test_spatial_bridge.py  test_topological_solver.py  test_voice_pipeline.py  test_volumetric.py
workers/: worker.py
